# task5

./: .gitignore  MHRC_ACTION_PROMPT_JSON_STANDARDS.md  MHRC_TASK5_INTEGRATION_GUIDE_ZH.md  MHRC_TASK5_OPTIONAL_MODE_PLAN.md  README.md  TASK5_STATE_MACHINE_STATUS_AND_TRANSITIONS.md  requirements.txt  run_task5_all.sh
26-WrightEagle.AI-MHRC-planning/: README.md  TEXT_INPUT_PIPELINE.md
26-WrightEagle.AI-MHRC-planning/demo/: demo_navigate.py  demo_retry.py
26-WrightEagle.AI-MHRC-planning/src/: config.py  config_local.example.py  main.py  robot_controller.py
26-WrightEagle.AI-MHRC-planning/tests/: compare_modes.py  task5_ack_timeout_probe.py  test_basic.py  (+1 more)
26-WrightEagle.AI-Speech/: .gitignore  README.md  requirements.txt
26-WrightEagle.AI-YOLO-Perception/: README.md  realsense_found.py  realsenseinfer.py  yolo_found.py  yolo_molmo_predict.py  yolo_seg_infer.py
26-WrightEagle.AI-navigation/: .gitignore  README.md  install_dependencies.sh
26-WrightEagle.AI-navigation/src/nav_bringup/: CMakeLists.txt  package.xml
26-WrightEagle.AI-navigation/src/nav_bringup/config/: costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
26-WrightEagle.AI-navigation/src/nav_bringup/launch/: start_navigation.launch
26-WrightEagle.AI-navigation/src/nav_bringup/launch/include/: move_base.launch
base_4drive/: README.md  run_task5_base_real.sh
far_planner/: README.md  run_task5_farplanner_real.sh
fastlio_ws/: README.md  auto_workflow.sh  run_task5_fastlio_real.sh
task5_person_tracker/: README.md  requirements.txt  run_task5_person_follow_voice.sh
(+86 files in other folders)
